[package]
edition = "2021"
name = "json-schema"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = { version = "2.3", features = ["serde"] }
regex = "1.6"
indextree = "4.5"
case-utils = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = { version = "0.3" }
async-recursion = "1.0"
